Fix issue where wordmark was wrapping to a second row at medium/lg screen sizes.

--- a/css/main.css
+++ b/css/main.css
@@ -459,7 +459,6 @@ ul.list li {
         justify-content: space-between;
     }
     header h2.logo {
-        width: 27%;
         text-align: left;
         padding-left: 1rem;
     }
@@ -508,7 +507,8 @@ ul.list li {
         padding: 0 2rem;
         overflow: hidden;
     }
-      /* Who We Are section */
+
+    /* Who We Are section */
     #who .container {
         max-width: 100vw;
         flex-direction: row;
